Fixed spacing issue between scenerio selector and guages for small screens

--- a/src/components/css/Dashboard.css
+++ b/src/components/css/Dashboard.css
@@ -252,7 +252,8 @@
 }
 @media screen and (max-width: 822px) {
   .dashboard-data-grid {
-    grid-template-columns: auto repeat(6, 80px);
+    justify-items: start;
+    grid-template-columns: 100px repeat(6, 80px);
     grid-template-rows: repeat(2, 80px);
   }
 
